package ch.zhaw.studyflow.webserver;

public interface WebServer {
    void start();
}
