package ch.zhaw.studyflow.webserver;

public interface ControllerFactory {

}
